--- a/BookingDone.html
+++ b/BookingDone.html
@@ -8,13 +8,24 @@
     <link rel="stylesheet" type="text/css" href="css/BookingDone.css">
 </head>
 <body>
-    <h1 class="Bookingh1">訂票明細</h1>
-    <h2 class="Bookingh2">購票資訊</h2>
+    <h1 class="Bookingh1">訂票明細(購買成功)</h1>
+    <h2 class="Bookingh2">會員資訊</h2>
     <table>
         <tr>
             <td>帳號:leon Wang </td>
-            <td>Email:Ting Wang@gmail.com</td>
+            <td>Email:leon Wang@gmail.com</td>
             <td>積分:1000元</td>
+        </tr>
+    </table>
+    <h2 class="Bookingh2">訂單訊息</h2>
+    <table font-weight: bold;>
+        <tr>
+            <td>訂票編號:</td>
+            <td>CCCC</td>
+        </tr>
+        <tr>
+            <td>訂票日期:</td>
+            <td id="orderdate"></td>
         </tr>
     </table>
     <h2 class="Bookingh2">購票明細</h2>
@@ -72,5 +83,13 @@
         </tr>
     
     </table>
+    <script>
+        var now = new Date();
+        var year  = now.getFullYear();
+        var month = now.getMonth() + 1; // getMonth() is zero-based
+        var day = now.getDate();
+        // var date= now.getYear() + "-" + now.getMonth() + "-" + now.getDate();
+        document.getElementById('orderdate').innerText =year + "-" + month + "-" + day;
+    </script>
 </body>
 </html>
