3 commit  TheaterInfo & nav & Booking details

--- a/buyticket.html
+++ b/buyticket.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" type="text/css" href="css/buyticket.css">
 <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
 </head>
-<body>
+<body>y
 	<form method="get" action="" align="center">
 		<h2>購買節目票劵</h2>
 		<table>
