4  commit  header & footer

--- a/header.html
+++ b/header.html
@@ -8,6 +8,7 @@
     <style>
         body{
             background-color:black;
+            font-family: "微軟正黑體", Arial ,sans-serif;
         }
         .topmenu{
             width: 100%;
@@ -28,12 +29,13 @@
         }
         .mainmenu .logo{
             text-align: left;
+            width:40%;
             margin: 8px 20px;
             display: inline-block;
         }
         .mainmenu .menu {
             float: right;
-            margin: 20px 20px;
+            margin: 20px 40px;
             display: inline-block;
         }
         .mainmenu .menu a{
@@ -51,24 +53,23 @@
     </style>
 </head>
 <body>
-    <header >
-        <div class="topmenu">
-            <a href="#">登入/註冊</a>
-            <a href="#">購物車</a>
-        </div>        
-        <div class="mainmenu">
-            <div class="logo">
-                <img src="img/logo3_陳翊慈_改.png" alt="logo" style=" width:200px; height:50px; vertical-align: middle;  ">
+    <header>
+            <div class="topmenu">
+                <a href="#">登入/註冊</a>
+                <a href="#">購物車</a>
             </div>
-            <nav class="menu">
-                <a href="#">設施</a>
-                <a href="#">劇場</a>
-                <a href="#">活動</a>
-                <a href="#">留言板</a>
-                <a href="#"></a>
-            </nav>
-        </div>
+            <div class="mainmenu">
+                <div class="logo">
+                    <img src="img/logo3_陳翊慈_改.png" alt="logo" style=" width:200px; height:50px; vertical-align: middle;  ">
+                </div>
+                <nav class="menu">
+                    <a href="#">設施</a>
+                    <a href="#">劇場</a>
+                    <a href="#">活動</a>
+                    <a href="#">留言板</a>
+                </nav>
+            </div>
     </header>
-   
+    
 </body>
 </html>
