--- a/TheaterInfo.html
+++ b/TheaterInfo.html
@@ -1,102 +1,134 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>TheaterInfo</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="css/reset.css">
+    <link rel="stylesheet" type="text/css" href="css/header.css">
     <link rel="stylesheet" href="css/Theaterinfo.css" />
+    <script src="js/TheaterInfo.js"></script>
+    <title>Theaterinfo</title>
 </head>
+
 <body>
-    <!-- Banner -->
-    <section class="banner full">
-        <article>
-            <img src="img/Galaxy06.jpg" alt="" />
-            <div class="inner">
-                <header>
-                    <!-- <p>A free responsive web site template by <a href="https://templated.co">TEMPLATED</a>
-                            </p> -->
-                    <h2>尋找星生命</h2>
-                </header>
-            </div>
-        </article>
-        <article>
-            <img src="img/transformers-movie.jpg" alt="" />
-            <div class="inner">
-                <header>
-                    <!-- <p>Lorem ipsum dolor sit amet nullam feugiat</p> -->
-                    <h2>Transformers</h2>
-                </header>
-            </div>
-        </article>
-        <!-- <article>
-                <img src="images/slide03.jpg"  alt="" />
-                <div class="inner">
-                    <header>
-                        <p>Sed cursus aliuam veroeros lorem ipsum nullam</p>
-                            <h2>Tempus dolor</h2>
-                    </header>
-                </div>
-            </article>
-            <article>
-                <img src="images/slide04.jpg"  alt="" />
-                <div class="inner">
-                        <header>
-                            <p>Adipiscing lorem ipsum feugiat sed phasellus consequat</p>
-                            <h2>Etiam feugiat</h2>
-                        </header>
-                </div>
-            </article>
-            <article>
-                <img src="images/slide05.jpg"  alt="" />
-                <div class="inner">
-                    <header>
-                        <p>Ipsum dolor sed magna veroeros lorem ipsum</p>
-                        <h2>Lorem adipiscing</h2>
-                    </header>
-                </div>
-            </article> -->
-    </section>
+    <!-- header -->
+    <div class="header">
+        <ul class="ul_top">
+            <li>
+                <a href="javascript:void(0)">註冊</a>
+            </li>
+            <li>
+                <a href="javascript:void(0)">登入</a>
+            </li>
+            <li>
+                <a href="javascript:void(0)">購物車</a>
+            </li>
+        </ul>
+    </div>
+    <div class="nav">
+        <ul class="ul_left">
+            <li>
+                <a href="javascript:void(0)">劇場購票</a>
+            </li>
+            <li>
+                <a href="javascript:void(0)">設施購票</a>
+            </li>
+            <li>
+                <a href="javascript:void(0)">設施介紹</a>
+            </li>
+        </ul>
+        <h1 style="display: none">FutureAtlas_未來主題樂園</h1>
+        <a href="javascript:void(0)">
+            <img src="img/LOGO.png" class="logo">
+        </a>
+        <ul class="ul_right">
+            <li>
+                <a href="#map">園區地圖</a>
+            </li>
+            <li>
+                <a href="javascript:void(0)">活動月曆</a>
+            </li>
+            <li>
+                <a href="javascript:void(0)">留言專區</a>
+            </li>
+        </ul>
+    </div>
+    <!-- header end-->
 
-    <!-- 購買票劵 -->
-    <div class="buyticket">
-        <div class="progressone">
-            <h2>尋找星生命 </h2>
-            <a href="#">立即購買</a>
+    <!-- 小導覽列 -->
+    <div class="Menu">
+        <div class="progressinfoMenu">
+            <a href="TheaterInfo.html">節目介紹</a>
         </div>
-        <div class="progresstwo">
-            <h2>恐龍末日</h2>
-            <a href="#">立即購買</a>
+
+        <div class="buyticketMenu">
+            <a href="theaterbuyticket.html">購買票劵</a>
         </div>
     </div>
 
-    <!-- 尋找星生命介紹 -->
-    <div class="progressoneinfo">
-        <h2>尋找星生命 life in space</h2>
-        <p>
-            宇宙與生命，一向是人類對自然的最大好奇。宇宙中的生命，自然是最吸引人們關注的話題。宇宙有多大?生命是甚麼?在浩瀚的宇宙中是否還有其他生命?他們會存在於甚麼樣的星球環境裏?這就是本片所要介紹的主題。在太陽系中，近年來的探尋從地球上延伸到土衛六泰坦表面的液態碳氫化合物大湖，木衛二歐羅巴厚厚的水冰層下可能的液態海洋，從土衛二恩克拉多斯南極冰縫噴湧而出的水噴流，伽利略號偵測到木衛三加尼米德的地下海洋和強大磁場，打破我們一直以為液態水是地球專利的刻板印象。
-        </p>
-    </div>
-    <!-- 尋找星生命照片 -->
-    <div class="progressonepicture">
-        <img src="img/life in space.jpg">
+    <div class="topright">
+        <!-- 可以按箭頭轉換順續 -->
+        <a href="#">
+            <img src="img/Recycle_arrows_3.png" style="width:50px; height:50px;">
+        </a>
+        <!-- 可以變換標題 -->
+        <div class="Menutitle">
+            <h2 id="Menutitleh2">節目介紹</h2>
+        </div>
+
+        <!-- 畫線 -->
+        <canvas id="canvas" width="300" height="300" class="toprightcanvas">
+        </canvas>
+        <!-- <hr size="8px" align="center" width="15%" style="background-color:#35ffba" >
+      <hr size="8px" align="center" width="15%" style="background-color:#35ffba" class="hrRotate">
+      <hr size="8px" align="center" width="15%" style="background-color:#35ffba" class="hrRotate2"> -->
+        <!-- 星球 -->
+        <img src="img/Neptune.png" style="width:500px; height:500px;" class="planet">
+        <!-- 太空人 -->
+        <img src="img/spaceman_2.png" style="width:400px; height:400px;" class="spaceman">
     </div>
 
-    <!-- 恐龍末日介紹 -->
-    <div class="progresstwoinfo">
-        <h2>恐龍末日Dinosaurs at Dusk</h2>
-        <p>
-            本館為饗宴廣大的恐龍迷，106年元旦將推出「恐龍末日」（Dinosaurs at Dusk）。這是由熱愛飛行冒險的少女－露西及致力追蹤小行星的父親，一起為大家探索恐龍與鳥之間的關係，長羽毛的恐龍是不是就是鳥呢？影片內容包括大陸漂移，恐龍生存年代與發展，恆星的運動及小行星撞地球和影響，物種滅絕和有關飛行的趨同發展等。
+    <!--  第一個節目 -->
+    <div class="programone">
+        <div class="programonetitle">
+            <h2>尋找星生命</h2>
+        </div>
+        <span class="programoneHr"></span>
+        <!--  <hr size="8px" align="center" width="48%" style="background-color:#35ffba" class="programoneHr" > -->
+        <p class="programonecontent">
+            宇宙與生命，一向是人類對自然的最大好奇。宇宙中的生命，自然是最吸引人們關注的話題。
         </p>
+        <span class="programoneHr2"></span>
+        <!-- <hr size="10px" align="center" width="48%" style="background-color:#35ffba" class="programoneHr2" > -->
+        <img src="img/spaceship_2.png" style="width:500px; height:500px;" class="spaceship">
     </div>
 
-    <!-- 恐龍末日照片 -->
-    <div class="progresstwopicture">
-        <img src="img/dinosaur.jpg">
+    <!-- 第二個節目 -->
+    <div class="programtwo">
+        <div class="programtwotitle">
+            <h2>尋找星球</h2>
+        </div>
+        <p class="programtwocontent">
+            人類是熱愛冒險的物種，對探索與發現情有獨鍾，因此不斷的在各個地方用不同的方法探索宇宙生命的存在。
+        </p>
+        <span class="programtwospan"></span>
+        <span class="programtwospan2"></span>
+        <hr size="8px" align="center" width="35%" style="background-color:#35ffba" class="programtwoHr">
+        <hr size="8px" align="center" width="35%" style="background-color:#35ffba" class="programtwoHr2">
+        <img src="img/planet_6.png" style="width:300px; height:
+      300px;" class="programtwoimg">
+        <img src="img/planet_4.png" style="width:300px; height:
+      300px;" class="programtwoimg2">
+        <img src="img/planet_1.png" style="width:300px; height:
+      300px;" class="programtwoimg3">
     </div>
-    <!-- Scripts banner -->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/skel.min.js"></script>
-    <script src="js/main.js"></script>
+
+    <!-- 立即購買按鈕 -->
+    <div class="buyticketBtn">
+        <a href="Theaterbuyticket.html">立即購買</a>
+    </div>
 </body>
+
 </html>
