--- a/TheaterMang.html
+++ b/TheaterMang.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<title>Theater progress</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>Theater progress</title>
+    <link rel="stylesheet" type="text/css" href="css/reset.css">
 <style type="text/css">
 	table {
         border:1px solid black;
