7 commit 改變按鈕外觀

--- a/Booking_details.html
+++ b/Booking_details.html
@@ -30,7 +30,7 @@
     <div class="nav">
         <ul class="ul_left">
             <li>
-                <a href="javascript:void(0)">劇場購票</a>
+                <a href="Theaterbuyticket.html">劇場購票</a>
             </li>
             <li>
                 <a href="javascript:void(0)">設施購票</a>
