--- a/buyTTicket.html
+++ b/buyTTicket.html
@@ -26,7 +26,7 @@
     <div class="nav">
         <ul class="ul_left">
             <li>
-                <a href="javascript:void(0)">劇場購票</a>
+                <a href="Theaterbuyticket.html">劇場購票</a>
             </li>
             <li>
                 <a href="javascript:void(0)">設施購票</a>
@@ -105,6 +105,10 @@
                 </td>
             </tr>
         </table>
+    </div>
+
+    <div class="Previouspage">
+        <a href="Theaterbuyticket.html">上一頁</a>
     </div>
 </body>
 </html>
